--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <header class="page-header">
+        <div class="container header-container">
         <nav class="header-nav">
             <a href="./index.html" class="logo header-logo">Web <span class="logo-part">Studio</span></a>
             <ul class="nav-list">
@@ -22,34 +23,39 @@
                 <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
             </ul>
         </nav>
-        <address class="header-adress">
+        <address class="contacts">
             <ul class="contact-list">
                 <li class="contact-item"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
                 <li class="contact-item"><a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+        </div>
     </header>
     <main>
-    <section class="button-section">
-        <h1 class="button-header">Effective Solutions for Your Business</h1>
-        <button type="button" class="header-button">Order Service</button>
+    <section class="button-section container-button">
+        <div class="button-container">
+            <h1 class="button-header">Effective Solutions for Your Business</h1>
+            <button type="button" class="header-button">Order Service</button>
+        </div>
     </section>
     <section>
-    <h2>Benefits</h2>
-    <ul>  
-        <li class="items-list"> <h3 class="item-header">Strategy</h3>
-        <p class="item-paraghraf">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p> </li>
-        <li class="items-list"> <h3 class="item-header">Punctuality</h3>
-            <p class="item-paraghraf">Bring the key message to the brand's audience for the best price within the shortest possible time.</p> </li>
-        <li class="items-list"> <h3 class="item-header">Diligence</h3>
-            <p class="item-paraghraf">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p> </li>
-        <li class="items-list"> <h3 class="item-header">Technologies</h3>
-            <p class="item-paraghraf">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p> </li>
-    </ul>
+        <div class="benefits-list-container">
+            <h2 class="benefits">Benefits</h2>
+            <ul class="benefits-container">  
+                <li class="items-list"> <h3 class="item-header">Strategy</h3>
+                <p class="item-paraghraf">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p> </li>
+                <li class="items-list"> <h3 class="item-header">Punctuality</h3>
+                <p class="item-paraghraf">Bring the key message to the brand's audience for the best price within the shortest possible time.</p> </li>
+                <li class="items-list"> <h3 class="item-header">Diligence</h3>
+                <p class="item-paraghraf">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p> </li>
+                <li class="items-list"> <h3 class="item-header">Technologies</h3>
+                <p class="item-paraghraf">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p> </li>
+            </ul>
+        </div>
     </section>
     <section class="team">
         <h2 class="team-header">Our Team</h2>
-        <ul>
+        <ul class="team-list">
             <li class="team-item"><img src="./images/1.jpg" alt="Mark Guerrero Product Designer"  width="264">
                 <h3 class="item-header">Mark Guerrero</h3>
                 <p class="item-paraghraf">Product Designer</p></li>
