--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="page-header">
-        <div class="container header-container">
+    <div class="container header-container">
         <nav class="header-nav">
             <a href="./index.html" class="logo header-logo">Web <span class="logo-part">Studio</span></a>
             <ul class="nav-list">
@@ -29,7 +29,6 @@
                 <li class="contact-item"><a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-        </div>
     </header>
     <main>
     <section class="button-section container-button">
@@ -88,6 +87,8 @@
             <h3 class="portfolio-title">Meditation App</h3>
             <p class="portfolio-description">App</p>
         </li>
+    </ul>
+    <ul class="portfolio-list">
         <li class="portfolio-item">
             <img src="./images/8.jpg" alt="Taxi Service" width="360">
             <h3 class="portfolio-title">Taxi Service</h3>
@@ -110,7 +111,7 @@
         <a href="./index.html" class="logo footer-logo">Web <span class="logo-part">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
-
+    </div>
 </body>
 
 </html>
