--- a/index.html
+++ b/index.html
@@ -29,16 +29,17 @@
                 <li class="contact-item"><a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+    </div>
     </header>
     <main>
     <section class="button-section container-button">
-        <div class="button-container">
+        <div class="button-container container">
             <h1 class="button-header">Effective Solutions for Your Business</h1>
             <button type="button" class="header-button">Order Service</button>
         </div>
     </section>
     <section>
-        <div class="benefits-list-container">
+        <div class="benefits-list-container container">
             <h2 class="benefits">Benefits</h2>
             <ul class="benefits-container">  
                 <li class="items-list"> <h3 class="item-header">Strategy</h3>
@@ -69,9 +70,10 @@
             <p class="item-paraghraf">UI Designer</p></li>
         </ul>
     </section>
-    <section class="team">
+    <section class="portfolio">
+        <div class="portfolio-container">
         <h2 class="portfolio-header">Our Portfolio</h2>
-    <ul class="portfolio-list">
+        <ul class="portfolio-list">
         <li class="portfolio-item">
             <img src="./images/5.jpg" alt="Banking App" width="360">
             <h3 class="portfolio-title">Banking App</h3>
@@ -105,13 +107,15 @@
             <p class="portfolio-description">Marketing</p>
         </li>
     </ul>
+    </div>
     </section>
     </main>
     <footer class="page-footer">
+        <div class="footer-container">
         <a href="./index.html" class="logo footer-logo">Web <span class="logo-part">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
-    </div>
 </body>
 
 </html>
