add first steps to finish this work

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <button type="button" class="header-button">Order Service</button>
         </div>
     </section>
-    <section>
+    <section class="benefits-section">
         <div class="benefits-list-container container">
             <h2 class="benefits">Benefits</h2>
             <ul class="benefits-container">  
