--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </section>
     </main>
     <footer class="page-footer">
-        <div class="footer-container">
+        <div class="container">
         <a href="./index.html" class="logo footer-logo">Web <span class="logo-part">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
