add first steps to finish this work

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         </div>
     </section>
     <section class="team">
+        <div class="container">
         <h2 class="team-header">Our Team</h2>
         <ul class="team-list">
             <li class="team-item"><img src="./images/1.jpg" alt="Mark Guerrero Product Designer"  width="264">
@@ -69,6 +70,7 @@
             <h3 class="item-header">Daniel Wilson</h3>
             <p class="item-paraghraf">UI Designer</p></li>
         </ul>
+        </div>
     </section>
     <section class="portfolio">
         <div class="portfolio-container">
