--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </section>
     <section class="portfolio">
-        <div class="portfolio-container">
+        <div class="portfolio-container container">
         <h2 class="portfolio-header">Our Portfolio</h2>
         <ul class="portfolio-list">
         <li class="portfolio-item">
@@ -91,8 +91,6 @@
             <h3 class="portfolio-title">Meditation App</h3>
             <p class="portfolio-description">App</p>
         </li>
-    </ul>
-    <ul class="portfolio-list">
         <li class="portfolio-item">
             <img src="./images/8.jpg" alt="Taxi Service" width="360">
             <h3 class="portfolio-title">Taxi Service</h3>
