--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
     <section class="benefits-section">
         <div class="benefits-list-container container">
-            <h2 class="benefits">Benefits</h2>
+            <h2 class="benefits visually-hidden">Benefits</h2>
             <ul class="benefits-container">  
                 <li class="items-list"> <h3 class="item-header">Strategy</h3>
                 <p class="item-paraghraf">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p> </li>
