--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                 <p class="item-paraghraf">Product Designer</p></div></li>
             <li class="team-item"><img src="./images/2.jpg" alt="Tom Ford Frontend Developer" width="264">
                 <h3 class="item-header">Tom Ford</h3>
-            <div>
+            <div class="item-container">
                 <p class="item-paraghraf">Frontend Developer</p></div></li>
             <li class="team-item"><img src="./images/3.jpg" alt="Camila Garcia Marketing" width="264">
-            <div>
+            <div class="item-container">
                 <h3 class="item-header">Camila Garcia</h3>
                 <p class="item-paraghraf">Marketing</p></div></li>
             <li class="team-item"><img src="./images/4.jpg" alt="Daniel Wilson UI Designer" width="264">
-            <div>
+            <div class="item-container">
             <h3 class="item-header">Daniel Wilson</h3>
             <p class="item-paraghraf">UI Designer</p></div></li>
         </ul>
