--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </main>
     <footer class="page-footer">
         <div class="container">
-        <a href="./index.html" class="logo footer-logo">Web <span class="logo-part">Studio</span></a>
+        <a href="./index.html" class="logo footer-logo logo-container">Web <span class="logo-part">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
