--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </ul>
         </div>
     </section>
-    <section class="portfolio">
+    <section class="portfolio portfolio-section">
         <div class="portfolio-container container">
         <h2 class="portfolio-header">Our Portfolio</h2>
         <ul class="portfolio-list">
