--- a/index.html
+++ b/index.html
@@ -81,34 +81,46 @@
         <h2 class="portfolio-header">Our Portfolio</h2>
         <ul class="portfolio-list">
         <li class="portfolio-item">
+            <div class="portfolio-div">
             <img src="./images/5.jpg" alt="Banking App" width="360">
             <h3 class="portfolio-title">Banking App</h3>
             <p class="portfolio-description">App</p>
+            </div>
         </li>
         <li class="portfolio-item">
+            <div class="portfolio-div">
             <img src="./images/6.jpg" alt="Cashless Payment" width="360">
             <h3 class="portfolio-title">Cashless Payment</h3>
             <p class="portfolio-description">Marketing</p>
+            </div>
         </li>
         <li class="portfolio-item">
+            <div class="portfolio-div">
             <img src="./images/7.jpg" alt="Meditation App" width="360">
             <h3 class="portfolio-title">Meditation App</h3>
             <p class="portfolio-description">App</p>
+            </div>
         </li>
         <li class="portfolio-item">
+            <div class="portfolio-div">
             <img src="./images/8.jpg" alt="Taxi Service" width="360">
             <h3 class="portfolio-title">Taxi Service</h3>
             <p class="portfolio-description">Marketing</p>
+            </div>
         </li>
         <li class="portfolio-item">
+            <div class="portfolio-div">
             <img src="./images/9.jpg" alt="Screen Illustrations" width="360">
             <h3 class="portfolio-title">Screen Illustrations</h3>
             <p class="portfolio-description">Design</p>
+            </div>
         </li>
         <li class="portfolio-item">
+            <div class="portfolio-div">
             <img src="./images/10.jpg" alt="Online Courses" width="360">
             <h3 class="portfolio-title">Online Courses</h3>
             <p class="portfolio-description">Marketing</p>
+            </div>
         </li>
     </ul>
     </div>
